--- a/python/src/DeconditionedRandomVector_doc.i.in
+++ b/python/src/DeconditionedRandomVector_doc.i.in
@@ -1,4 +1,4 @@
-%feature("docstring") OT::ConditionalRandomVector
+%feature("docstring") OT::DeconditionedRandomVector
 "Conditional random vector.
 
 Helper class for defining the random vector :math:`\vect{X}` such that  :math:`\vect{X}|\vect{\Theta}` follows the distribution :math:`\mathcal{L}_{\vect{X}|\vect{\Theta}}`, with :math:`\vect{\Theta}` a random vector of dimension the dimension of :math:`\vect{\Theta}`.
@@ -32,7 +32,7 @@ Create a random vector:
 >>> distAlpha = ot.Uniform(0.0, 0.1)
 >>> distTheta = ot.JointDistribution([distGamma, distAlpha])
 >>> rvTheta = ot.RandomVector(distTheta)
->>> rvX = ot.ConditionalRandomVector(distXgivenT, rvTheta)
+>>> rvX = ot.DeconditionedRandomVector(distXgivenT, rvTheta)
 
 Draw a sample:
 
@@ -40,7 +40,7 @@ Draw a sample:
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::ConditionalRandomVector::getRandomParameters
+%feature("docstring") OT::DeconditionedRandomVector::getRandomParameters
 "Accessor to the distribution's random parameter `randomParameters`.
 
 Returns
@@ -50,7 +50,7 @@ randomParameters : :class:`~openturns.RandomVector`, the random parameters :math
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::ConditionalRandomVector::getDistribution
+%feature("docstring") OT::DeconditionedRandomVector::getDistribution
 "Accessor to the distribution's conditioned distribution parameter `conditionedDistribution`.
 
 Returns
