--- a/lib/src/Uncertainty/Model/CMakeLists.txt
+++ b/lib/src/Uncertainty/Model/CMakeLists.txt
@@ -10,7 +10,7 @@ ot_add_source_file (SklarCopula.cxx)
 ot_add_source_file (ArchimedeanCopula.cxx)
 ot_add_source_file (RandomVector.cxx)
 ot_add_source_file (RandomVectorImplementation.cxx)
-ot_add_source_file (ConditionalRandomVector.cxx)
+ot_add_source_file (DeconditionedRandomVector.cxx)
 ot_add_source_file (ConstantRandomVector.cxx)
 ot_add_source_file (CompositeRandomVector.cxx)
 ot_add_source_file (FunctionalChaosRandomVector.cxx)
@@ -37,7 +37,7 @@ ot_install_header_file (SklarCopula.hxx)
 ot_install_header_file (RandomVector.hxx)
 ot_install_header_file (EllipticalDistribution.hxx)
 ot_install_header_file (CompositeRandomVector.hxx)
-ot_install_header_file (ConditionalRandomVector.hxx)
+ot_install_header_file (DeconditionedRandomVector.hxx)
 ot_install_header_file (DistributionFactoryResult.hxx)
 ot_install_header_file (DistributionFactory.hxx)
 ot_install_header_file (DistributionImplementation.hxx)
