--- a/python/src/FieldToPointFunctionalChaosAlgorithm_doc.i.in
+++ b/python/src/FieldToPointFunctionalChaosAlgorithm_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::FieldToPointFunctionalChaosAlgorithm
 "Functional metamodel algorithm based on chaos decomposition.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 The present algorithm allows one to build a response surface of the application :math:`h` of the form:
 
 .. math::
@@ -93,7 +89,7 @@ y : :class:`~openturns.Sample`
 
 See also
 --------
-openturns.experimental.FieldFunctionalChaosSobolIndices
+FieldFunctionalChaosSobolIndices
 openturns.KarhunenLoeveAlgorithm
 openturns.FunctionalChaosAlgorithm
 
@@ -127,14 +123,13 @@ the chaos input dimension.
 Examples
 --------
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> ot.RandomGenerator.SetSeed(0)
 >>> mesh = ot.RegularGrid(0.0, 0.1, 20)
 >>> cov = ot.KroneckerCovarianceModel(ot.MaternModel([2.0], 1.5), ot.CovarianceMatrix(4))
 >>> X = ot.GaussianProcess(cov, mesh)
 >>> x = X.getSample(500)
 >>> y = [[m[0] + m[1] + m[2] - m[3] + m[0] * m[1] - m[2] * m[3] - 0.1 * m[0] * m[1] * m[2]] for m in [xi.computeMean() for xi in x]]
->>> algo = otexp.FieldToPointFunctionalChaosAlgorithm(x, y)
+>>> algo = ot.FieldToPointFunctionalChaosAlgorithm(x, y)
 >>> algo.setThreshold(4e-2)
 >>> # Temporarily lower the basis size for the sake of this example.
 >>> ot.ResourceMap.SetAsUnsignedInteger('FunctionalChaosAlgorithm-BasisSize', 100)
@@ -182,7 +177,7 @@ It computes the response surfaces and creates a
 
 Returns
 -------
-result : :class:`openturns.experimental.FieldFunctionalChaosResult`
+result : :class:`openturns.FieldFunctionalChaosResult`
     Result class."
 
 // ---------------------------------------------------------------------
