--- a/python/src/UserDefinedMetropolisHastings_doc.i.in
+++ b/python/src/UserDefinedMetropolisHastings_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::UserDefinedMetropolisHastings
 "User-defined Metropolis-Hastings method.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 Refer to :ref:`bayesian_calibration`, :ref:`metropolis_hastings`.
 
 Available constructor:
@@ -71,7 +67,6 @@ For :math:`k=1,2,...`:
 Examples
 --------
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> import math as m
 >>> ot.RandomGenerator.SetSeed(0)
 
@@ -99,7 +94,7 @@ but moved according to the derivative of the target log-density.
 ...     mean = x[0] + h / 2 * derivative_log_density
 ...     return [mean, std_deviation]
 >>> link = ot.PythonFunction(1, 2, python_link)
->>> mala = otexp.UserDefinedMetropolisHastings(log_density, support, initialState, proposal, link)
+>>> mala = ot.UserDefinedMetropolisHastings(log_density, support, initialState, proposal, link)
 >>> x = mala.getSample(10)"
 
 
