--- a/python/src/BoundaryMesher_doc.i.in
+++ b/python/src/BoundaryMesher_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::BoundaryMesher
 "Creation of the boundary mesh of a given mesh.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 Notes
 -----
 The boundary extraction is based on the remark that a :math:`(d-1)` face of a
@@ -23,13 +19,12 @@ Examples
 Create a mesh:
 
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> mesher = ot.LevelSetMesher([5, 10])
 >>> level = 1.0
 >>> function = ot.SymbolicFunction(['x0', 'x1'], ['x0^2+x1^2'])
 >>> levelSet = ot.LevelSet(function, ot.LessOrEqual(), level)
 >>> mesh = mesher.build(levelSet, ot.Interval([-2.0]*2, [2.0]*2))
->>> boundaryFactory = otexp.BoundaryMesher()
+>>> boundaryFactory = ot.BoundaryMesher()
 >>> boundaryMesh = boundaryFactory.build(mesh)
 >>> thickBoundaryMeshOutside = boundaryFactory.build(mesh, 1e-5)
 >>> thickBoundaryMeshInside = boundaryFactory.build(mesh, -1e-5)
