Pagmo: Fix Werror=cpp

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -49,6 +49,9 @@ endif ()
 
 if (Pagmo_FOUND)
   set_source_files_properties (Base/Optim/Pagmo.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+  if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+     set_source_files_properties (Base/Optim/Pagmo.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=cpp")
+  endif ()
 endif ()
 
 # Exclude LibXML sources
